bonus/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  ports:
  - port: 80
    targetPort: 80
  - port: 443
    targetPort: 443
  - port: 22
    targetPort: 22
  selector:
    app: gitlab
  type: ClusterIP
